
=== Core classes updates (outstanding ones only)

* Enumerable
  * Extended methods:
    * min, min_by, max and max_by supports optional argument to return
      multiple elements.

* Symbol
  * New methods
    * Symbol.find(str) returns whether given string is defined as symbol or not.
  * Improvements
    * Most symbols which are returned by String#to_sym and
      String#intern are GC-able.

=== Core classes compatibility issues (excluding feature bug fixes)

* IO
  * incompatible changes:
    * When flushing file IO, you cannot assume that the metadata of the file
      is updated immediately.  On some platforms (especially Windows), it is
      delayed until the filesystem load is decreased.
* Proc
  * incompatible changes:
    * ArgumentError is no longer raised when lambda Proc is passed as a
      block, and the number of yielded arguments does not match the formal
      arguments of the lambda, if just an array is yielded and its length
      matches.

=== Stdlib updates (outstanding ones only)

* Find, Pathname
  * Extended methods:
    * find method accepts "ignore_error" keyword argument.

=== Stdlib compatibility issues (excluding feature bug fixes)

=== Built-in global variables compatibility issues

=== C API updates

* Deprecated APIs removed.  [Feature #9502]

  Check_SafeStr -> SafeStringValue
  rb_check_safe_str -> SafeStringValue
  rb_quad_pack -> rb_integer_pack
  rb_quad_unpack -> rb_integer_unpack
  rb_read_check : access struct FILE internal. no replacement.
  rb_struct_iv_get : internal function. no replacement.
  struct rb_blocking_region_buffer : internal type. no replacement.
  rb_thread_blocking_region_begin -> rb_thread_call_without_gvl family
  rb_thread_blocking_region_end -> rb_thread_call_without_gvl family
  TRAP_BEG -> rb_thread_call_without_gvl family
  TRAP_END -> rb_thread_call_without_gvl family
  rb_thread_select -> rb_thread_fd_select
  struct rb_exec_arg : internal type. no replacement.